# liveship

./: .gitignore  Cargo.toml  README.md  README.zh.md  bun.lockb  justfile  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: release-tauri.yaml  release.yaml
src/: api.rs  app.html  backstage.rs  db.rs  explorer.rs  ffmpeg.rs  kv.rs  main.rs  manager.rs  model.rs  recorder.rs  request.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  backstage.rs  config.rs  ffmpeg.rs  kv.rs  lib.rs  main.rs  manager.rs  media.rs  model.rs  recorder.rs  request.rs  utils.rs
src-tauri/src/platform/: bilibili.rs  douyin.rs  huya.rs  kuaishou.rs  mod.rs  tiktok.rs  xiaohongshu.rs
src/lib/: backstage.ts  ffmpeg.ts  model.ts  proxy.ts  store.svelte.ts  translations.js  utils.ts
src/lib/components/: CollapsiblePanel.svelte  button.svelte  config.svelte  dialog.svelte  new-record.svelte  record-list.svelte  record-plan.svelte  sidebar.svelte
src/lib/i18n/: cn.json  en.json
src/lib/platform/: bilibili.ts  douyin.ts  douyu.ts  huya.ts  kuaishou.ts  tiktok.ts  twitch.ts  xiaohongshu.ts  youtube.ts
src/platform/: bilibili.rs  douyin.rs  huya.rs  mod.rs  xiaohongshu.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/config/: +page.svelte
src/routes/live/: +page.svelte
src/routes/live/forward/: +page.svelte
src/routes/record/: +page.svelte
src/routes/record/history/: +page.svelte
src/routes/record/plan/: +page.svelte
web/: bun.lockb  package.json  svelte.config.js  tailwind.config.ts
web/src/: app.html
web/src/lib/: index.ts  model.ts  utils.ts
web/src/lib/api/: config.ts  ffmpeg.ts  history.ts  live.ts  plan.ts  record.ts
web/src/lib/components/: config.svelte  dialog.svelte  new-record.svelte  record-list.svelte  record-plan.svelte  sidebar.svelte
web/src/routes/: +page.svelte
