[package]
name = "liveship"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7" }
base64 = "0.22"
chrono = "0.4"
dashmap = { version = "5.5", features = ["inline"] }
dirs = "5.0"
include_dir = "0.7"
log = "0.4"
md5 = "0.7"
once_cell = "1.19"
open = "5"
pretty_env_logger = "0.5"
rand = "0.8"
redb = "2.1"
regex = "1.10"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tower-serve-static = "0.1"
urlencoding = "2.1"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
