[package]
name = "liveship"
version = "0.1.16"
description = "liveship 是一个直播录制工具，目前已支持抖音、虎牙、小红书、tiktok、twitch"
authors = ["jlvihv"]
email = "imvihv@gmail.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "liveship_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-single-instance = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dashmap = { version = "5.5", features = ["inline"] }
dirs = "5.0"
once_cell = "1"
redb = "2.1"
reqwest = "0.12"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
showfile = "0.1"
ffmpeg-sidecar = "1.1"
image = "0.25"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
