[package]
name = "liveship"
version = "0.1.24"
description = "liveship is a compact and user-friendly live stream recording tool that captures live streams as video files."
authors = ["jlvihv"]
email = "imvihv@gmail.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "liveship_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dashmap = { version = "5.5", features = ["inline"] }
dirs = "5.0"
once_cell = "1"
redb = "2.1"
reqwest = "0.12"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
showfile = "0.1"
ffmpeg-sidecar = "1.1"
image = "0.25"
rusty_ytdl = "0.7"
tauri-plugin-os = "2.0.0-beta.6"
sysproxy = "0.3.0"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
